# api-audit

./: .env.example  .replit  crawler.py  crawler_integration.py  main.py  pyproject.toml  replit.nix  test_excel.py
attached_assets/: Pasted--Top-20-Referring-Domains-Below-is-a-list-of-the-top-referring-domains-pointing-to-your-website-a-1754741900659_1754741900659.txt  Pasted--UI-UX-Audit-with-Puppeteer-Checks-1-Navigation-Structure-2-Design-Consistency-3-Mobile-1754915664586_1754915664588.txt  Pasted-A-custom-Python-crawler-that-scans-a-website-to-find-1-Broken-internal-links-2-Broken-external--1754752121951_1754752121952.txt  Pasted-Backlink-Profile-Summary-This-section-summarizes-the-key-metrics-of-your-website-s-backlink-profil-1754741194985_1754741194987.txt  Pasted-Build-a-Python-script-with-the-following-requirements-1-Inputs-Base-domain-e-g-ht-1754753182904_1754753182906.txt  Pasted-Create-a-section-in-the-PDF-report-titled-Page-Crawlability-Indexability-Insert-a-table-where-1754648424077_1754648424077.txt
reports/: additional_hosninsurance_ae_referring_domains_20250807_095543.csv  broken_links_hosninsurance_ae.csv  broken_links_hosninsurance_ae_20250120_143022.csv  broken_links_hosninsurance_ae_20250811_113254.csv  broken_links_hosninsurance_ae_20250814_132946.csv  broken_links_hosninsurance_ae_20250814_142246.csv  broken_links_mokaraminjurylawyers_com.csv  orphan_pages_hosninsurance_ae.csv  orphan_pages_hosninsurance_ae_20250811_113254.csv  orphan_pages_hosninsurance_ae_20250814_132946.csv  orphan_pages_hosninsurance_ae_20250814_142246.csv  (+8 more)
(+1 files in other folders)
