[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.3",
    "requests>=2.32.4",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.34.2",
    "playwright>=1.54.0",
    "pandas>=2.3.1",
    "openpyxl>=3.1.5",
]
